--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  background-color: var(--white);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap);
+
+:root {
+  /* define variables */
+  --accent: #7e71d3; /* #c51d2e or #ea9554 */
+  --white: #f8f8f8;
+  --black: #242424;
+  --gray: #cecece;
+  --title: "Montserrat";
+  --title-fallback: sans-serif;
+  --title-resume: "Helvetica";
+  --body: Georgia;
+  --body-fallback: serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* customize appearance of text */
+h1 {
+  font-family: var(--title), var(--title-fallback);
+  font-size: 72px;
+  font-weight: bolder;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h2 {
+  font-family: var(--title), var(--title-fallback);
+  font-size: 48px;
+  font-weight: bold;
+}
+
+h3 {
+  font-family: var(--title), var(--title-fallback);
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 0px;
+}
+
+h4 {
+  font-family: var(--title), var(--title-fallback);
+  font-weight: normal;
+  font-size: 20px;
+}
+
+h5 {
+  font-family: var(--title), var(--title-fallback);
+  font-weight: lighter;
+  font-size: 14px;
+}
+
+p {
+  font-family: var(--body), var(--body-fallback);
+  font-size: 18px;
+}
+
+.home,
+.about {
   display: flex;
-  flex-direction: column;
+  height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
+.fun {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fun-main {
+  display: block;
+  font-size: 3rem;
+}
+
+.fun-small {
+  display: block;
+  font-size: 1rem;
 }
